--- a/onlineshop/src/main/resources/templates/login-form.html
+++ b/onlineshop/src/main/resources/templates/login-form.html
@@ -16,6 +16,14 @@
         <section class="login-form">
             <h2>Имам регистрация</h2>
 
+            <div th:if="${successMessage}" class="alert alert-success" role="alert">
+                <p class="success" th:text="${successMessage}"></p>
+            </div>
+
+            <div th:if="${failureMessage}" class="alert alert-failure" role="alert">
+                <p th:text="${failureMessage}"></p>
+            </div>
+
             <form th:action="@{/users/login}"
                   th:method="POST">
 
