Add register and forgot password logic

--- a/onlineshop/src/main/resources/templates/email/forgot-password-email.html
+++ b/onlineshop/src/main/resources/templates/email/forgot-password-email.html
@@ -12,20 +12,18 @@
 <body>
 
     <div class="email-container">
-        <h1>Временна парола за достъп до профила ви</h1>
+        <h1>Линк за промяна на парола</h1>
 
         <div class="content">
-            <p>Здравей, <span th:text="${fullName}">[Име на новия служител]</span>,</p>
+            <p>Здравей, <span th:text="${fullName}">[име]</span>,</p>
 
             <p>Получихме заявка за нова парола от твоя имейл (<span th:text="${email}">имейл</span>). Можеш да смениш
                 паролата си след клик върху бутона.</p>
 
-            <form th:action="@{/users/update-password}"
-                  th:method="POST">
-                <button>Промяна на парола</button>
-            </form>
+            <a th:href="@{'http://localhost:8090/users/reset-password?token=' + ${token}}">Промяна на парола</a>
 
-            <p>С най-добри пожелания,<br>Екипът на Runtastic Shoes</p>
+            <p>С най-добри пожелания,<br>
+                Екипът на Runtastic Shoes</p>
         </div>
     </div>
 
