--- a/onlineshop/src/main/resources/templates/forgot-password.html
+++ b/onlineshop/src/main/resources/templates/forgot-password.html
@@ -18,6 +18,10 @@
 
             <h2>Забравена парола</h2>
 
+            <div th:if="${failureMessage}" class="alert alert-failure" role="alert">
+                <p th:text="${failureMessage}"></p>
+            </div>
+
             <p>Въведи имейл адреса, с който си се регистрирал и ще ти изпратим линк, с който да възстановиш твоята парола.</p>
 
             <div class="field">
