--- a/onlineshop/src/main/resources/templates/add-product.html
+++ b/onlineshop/src/main/resources/templates/add-product.html
@@ -16,6 +16,7 @@
 
         <form th:action="@{/products/add-product}"
               th:method="POST"
+              enctype="multipart/form-data"
               th:object="${addProductDTO}">
 
             <h1>Добавете продукт за продажба</h1>
@@ -44,7 +45,7 @@
 
             <div class="field">
                 <label th:for="price">Цена (в български лева)</label>
-                <input type="number" step="0.1" th:field="*{price}" th:errorclass="is-invalid"
+                <input type="number" step="0.01" th:field="*{price}" th:errorclass="is-invalid"
                        name="price" id="price">
                 <small th:if="${#fields.hasErrors('price')}"
                        th:errors="*{price}"
@@ -73,6 +74,16 @@
                     </label>
                 </div>
             </div>
+
+            <div class="field">
+                <label for="images">Качи снимки</label>
+                <input th:field="*{images}"
+                       th:errorclass="is-invalid"
+                       type="file" name="images" id="images" accept="image/*" multiple="multiple">
+            </div>
+            <small th:if="${#fields.hasErrors('images')}"
+                   th:errors="*{images}"
+                   class="text-danger">Dish name error message</small>
 
             <div class="field field-sizes">
                 <h4>Размери и наличности</h4>
