--- a/onlineshop/src/main/resources/static/css/header-styles.css
+++ b/onlineshop/src/main/resources/static/css/header-styles.css
@@ -153,3 +153,8 @@ header .after-nav {
 header .after-nav i {
     padding-right: 0.5em;
 }
+
+.has-items-in-cart i {
+    padding-left: 0.5em;
+    color: red;
+}
