Add shopping cart page and logic to add items to it

--- a/onlineshop/src/main/resources/templates/products.html
+++ b/onlineshop/src/main/resources/templates/products.html
@@ -46,7 +46,7 @@
                 <div class="sizes">
                     <div class="sizes-title">Налични размери:</div>
                     <div class="sizes">
-                        <span th:each="size : ${product.getSizes()}" th:text="${size}"></span>
+                        <span th:each="size : ${product.getSizes()}" th:text="${size.size}"></span>
                     </div>
                 </div>
             </a>
